# commerce-agent

./: .gitignore  README.md  docker-compose.yml  simulate_server.sh
.design/: agents-structure.md  project-frontend-design.md  project-server-system-design.md  project-system-design.md
.docs/: requirements.md
.plans/: client-implementation-plan.md  server-implementation-plan.md
client/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
client/src/: App.test.tsx  App.tsx  main.tsx
client/src/api/: chatClient.test.ts  chatClient.ts  types.ts
server/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
server/src/: config.py  main.py
server/src/agents/: orchestrator.py  recommendation.py  sales.py
server/src/agents/prompts/: orchestrator.md  recommendation.md  sales.md
server/src/api/: chat.py
server/src/core/: errors.py  pipeline.py
server/src/middleware/: __init__.py  errors.py  logging.py
server/src/schemas/: __init__.py  chat.py  intent.py  product.py  recommendation.py  requirements.py  search_plan.py
server/src/services/: dummyjson_client.py  post_filters.py  search_planner.py  session_store.py
server/tests/eval/: intent_classification.jsonl
server/tests/integration/: test_agents.py  test_chat_endpoint.py  test_dummyjson_client.py  test_pipeline.py  test_reliability.py
server/tests/unit/: test_middleware.py  test_post_filters.py  test_schemas.py  test_search_planner.py  test_session_store.py
(+39 files in other folders)
