[project]
name = "ai-shopping-copilot"
version = "0.1.0"
description = "AI Shopping Copilot server"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "pydantic-settings",
    "python-dotenv",
    "pydantic-ai",
    "httpx",
    "tenacity",
    "structlog",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["eval: marks tests as eval tests (deselect with '-m \"not eval\"')"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
